# TL-Agent

./: .gitignore  AGENTS.md  AGENTS.ru.md  README.md  README.ru.md  SPEC.md  SPEC.ru.md
.github/workflows/: ci.yml  release.yml
example-bundle/: execution_log.jsonl  manifest.json  topology.json
example-bundle/exports/segment_01/: manifest.json  topology_segment.json
example-bundle/exports/segment_01/receipts/action_read_files/: envelope.json
example-bundle/policies/: agent_policy.json  stop_policy.json  tool_policy.json
example-bundle/receipts/action_create_report/: bundle.tlbundle  cert.tlcert  envelope.json  proof.tlsig
example-bundle/receipts/action_read_files/: bundle.tlbundle  cert.tlcert  envelope.json  proof.tlsig
example-bundle/receipts/action_stop_for_review/: bundle.tlbundle  cert.tlcert  envelope.json  proof.tlsig
example-bundle/receipts/action_summarize/: bundle.tlbundle  cert.tlcert  envelope.json  proof.tlsig
schemas/: agent-policy-v1.json  envelope-v1.json  manifest-v1.json  stop-policy-v1.json  topology-v1.json
scripts/: validate_bundle.py
timelayer-agent-sdk/: Cargo.toml
timelayer-agent-sdk/src/: bundle.rs  check.rs  error.rs  lib.rs  main.rs  types.rs  verifier.rs
timelayer-agent-sdk/tests/: integration.rs
