[package]
name = "timelayer-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "TimeLayer Receipt-Gated Agent SDK — validates agent bundles offline against notarial .tlsig receipts"
license = "MIT"

[lib]
name = "timelayer_agent_sdk"
path = "src/lib.rs"

[[bin]]
name = "tl-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
