[package]
name = "timelayer-agent-sdk"
version = "0.2.0"
edition = "2021"
description = "TimeLayer Receipt-Gated Agent SDK — validates agent bundles offline against notarial cert+bundle receipts"
license = "Apache-2.0"
repository = "https://github.com/TimeLayer-OS/TL-Agent"

[lib]
name = "timelayer_agent_sdk"
path = "src/lib.rs"

[[bin]]
name = "tl-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
